# lbc-api

./: .dockerignore  .gitignore  CHANGELOG.md  CODING_STANDARDS.md  Dockerfile  Dockerfile.test  LICENSE  NOTICE  README.md  compose.yaml  pyproject.toml
app/: __init__.py  main.py
app/api/: __init__.py  deps.py  errors.py
app/api/v1/: __init__.py  ads.py  common.py  health.py  schema_docs.py  search.py  users.py
app/core/: __init__.py  config.py  factory.py  openapi_config.py
app/schemas/: __init__.py  domain_search.py  requests.py  responses.py
app/sdk/: client.py  utils.py
app/sdk/mixin/: ad.py  search.py  session.py  user.py
app/sdk/model/: ad.py  enums.py  user.py
app/services/: lbc_pool.py  sync_runtime.py
app/services/leboncoin/: __init__.py  client_factory.py  enum_resolution.py  live_search_scenarios.py  locations.py  mappers.py  real_estate_filters.py  search_service.py  vehicle_filters.py
scripts/: docker_api_e2e.sh  docker_up_test_down.sh  print_live_search_examples.py  write_nice_job_offers_json.py
tests/: conftest.py  test_ad_pictures.py  test_api.py  test_api_e2e_http.py  test_lbc_parallel.py  test_openapi.py  test_real_estate_filters.py  test_real_leboncoin_optional.py  test_search_service.py  test_vehicle_filters.py
tests/apptest/: .gitignore  README.md  _common.py  _template.html  run_mx5_compare.py  run_z900_compare.py  test_apptest_compare.py
