[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lbc-api"
version = "0.4.0"
description = "Production-oriented REST API for Leboncoin classifieds (single-package app with embedded HTTP client SDK)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "curl_cffi==0.11.3",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.28.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0",
]

[project.scripts]
lbc-api = "app.main:run"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

# Embedded HTTP client (historical style / star exports); keep strict lint on app/api, services, etc.
[tool.ruff.lint.per-file-ignores]
"app/sdk/**" = ["E501", "F401", "F403", "E711", "SIM102", "SIM105"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
show_error_codes = true
packages = ["app"]

[[tool.mypy.overrides]]
module = [
  "app.sdk",
  "app.sdk.client",
  "app.sdk.exceptions",
  "app.sdk.utils",
  "app.sdk.mixin",
  "app.sdk.mixin.session",
  "app.sdk.mixin.search",
  "app.sdk.mixin.user",
  "app.sdk.mixin.ad",
  "app.sdk.model",
  "app.sdk.model.ad",
  "app.sdk.model.city",
  "app.sdk.model.enums",
  "app.sdk.model.proxy",
  "app.sdk.model.search",
  "app.sdk.model.user",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = "curl_cffi.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
